--- a/css/style.css
+++ b/css/style.css
@@ -7,3 +7,16 @@
     margin: 0;
     padding: 0;
 }
+
+header{
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    top: 15px;
+    left: 0;
+    right: 0;
+    text-align: center;
+
+
+    background-color: black;
+}
