--- a/css/home.css
+++ b/css/home.css
@@ -77,20 +77,6 @@ body {
   }
 }
 
-.marquee--vertical {
-  --mask-direction: to bottom;
-}
-
-.marquee--vertical,
-.marquee--vertical .marquee__group {
-  flex-direction: column;
-}
-
-.marquee--vertical .marquee__group {
-  -webkit-animation-name: scroll-y;
-          animation-name: scroll-y;
-}
-
 .marquee--reverse .marquee__group {
   animation-direction: reverse;
   -webkit-animation-delay: -3s;
@@ -115,23 +101,6 @@ body {
   }
 }
 
-@-webkit-keyframes scroll-y {
-  from {
-    transform: translateY(var(--scroll-start));
-  }
-  to {
-    transform: translateY(var(--scroll-end));
-  }
-}
-
-@keyframes scroll-y {
-  from {
-    transform: translateY(var(--scroll-start));
-  }
-  to {
-    transform: translateY(var(--scroll-end));
-  }
-}
 
 /* Element styles */
 .marquee svg {
@@ -144,13 +113,6 @@ body {
   padding: calc(var(--size) / 10);
   border-radius: 0.5rem;
 }
-
-.marquee--vertical svg {
-  aspect-ratio: 1;
-  width: calc(var(--size) / 1.5);
-  padding: calc(var(--size) / 6);
-}
-
 /* Parent wrapper */
 .wrapper {
   display: flex;
@@ -160,82 +122,6 @@ body {
   max-width: 100vw;
 }
 
-.wrapper--vertical {
-  flex-direction: row;
-  height: 100vh;
-}
-
-/* Toggle direction button */
-.toggle {
-  --size: 3rem;
-  position: relative;
-  position: fixed;
-  top: 1rem;
-  left: 1rem;
-  width: var(--size);
-  height: var(--size);
-  font: inherit;
-  text-align: center;
-  cursor: pointer;
-  outline: none;
-  border: none;
-  border-radius: 50%;
-  color: inherit;
-  background-color: var(--color-bg-accent);
-  z-index: 1;
-}
-
-.toggle:focus-visible {
-  box-shadow: 0 0 0 2px var(--color-text);
-}
-
-.toggle span {
-  position: absolute;
-  display: inline-block;
-  top: 50%;
-  left: calc(100% + 0.4em);
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
-  white-space: nowrap;
-  transform: translateY(-50%);
-  -webkit-animation: fade 400ms 4s ease-out forwards;
-          animation: fade 400ms 4s ease-out forwards;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-}
-
-.toggle svg {
-  --size: 1.5rem;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: var(--size);
-  height: var(--size);
-  fill: currentcolor;
-  transform: translate(-50%, -50%);
-  transition: transform 300ms cubic-bezier(0.25, 1, 0.5, 1);
-}
-
-.toggle--vertical svg {
-  transform: translate(-50%, -50%) rotate(-90deg);
-}
-
-@-webkit-keyframes fade {
-  to {
-    opacity: 0;
-    visibility: hidden;
-  }
-}
-
-@keyframes fade {
-  to {
-    opacity: 0;
-    visibility: hidden;
-  }
-}
 
 
 
@@ -246,17 +132,151 @@ body {
   .marquee {
     --size: 15rem;
     --gap: 1rem;
+ }
+
+  .marquee {
+    --mask-direction: to bottom;
   }
-  .marquee--vertical {
-    --size: 15rem;
+
+  .marquee ,
+  .marquee .marquee__group {
+    flex-direction: column;
+  }
+
+  .marquee .marquee__group {
+    -webkit-animation-name: scroll-y;
+            animation-name: scroll-y;
+  }
+
+  .marquee--reverse .marquee__group {
+    animation-direction: reverse;
+    -webkit-animation-delay: -3s;
+            animation-delay: -3s;
+  }
+
+  @-webkit-keyframes scroll-y {
+    from {
+      transform: translateY(var(--scroll-start));
+    }
+    to {
+      transform: translateY(var(--scroll-end));
+    }
+  }
+
+  @keyframes scroll-y {
+    from {
+      transform: translateY(var(--scroll-start));
+    }
+    to {
+      transform: translateY(var(--scroll-end));
+    }
+  }
+
+  /* Element styles */
+  .marquee svg {
+    display: grid;
+    place-items: center;
+    width: var(--size);
+    fill: var(--color-text);
+    background: var(--color-bg-accent);
+    aspect-ratio: 16/9;
+    padding: calc(var(--size) / 10);
+    border-radius: 0.5rem;
+  }
+
+  .marquee svg {
+    aspect-ratio: 1;
+    width: calc(var(--size) / 1.5);
+    padding: calc(var(--size) / 6);
+  }
+
+  /* Parent wrapper */
+  .wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: var(--gap);
+    margin: auto;
+    max-width: 100vw;
+  }
+
+  .wrapper {
+    flex-direction: row;
+    height: 100vh;
+  }
+
+  /* Toggle direction button */
+  .toggle {
+    --size: 3rem;
+    position: relative;
+    position: fixed;
+    top: 1rem;
+    left: 1rem;
+    width: var(--size);
+    height: var(--size);
+    font: inherit;
+    text-align: center;
+    cursor: pointer;
+    outline: none;
+    border: none;
+    border-radius: 50%;
+    color: inherit;
+    background-color: var(--color-bg-accent);
+    z-index: 1;
+  }
+
+  .toggle:focus-visible {
+    box-shadow: 0 0 0 2px var(--color-text);
+  }
+
+  .toggle span {
+    position: absolute;
+    display: inline-block;
+    top: 50%;
+    left: calc(100% + 0.4em);
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+    white-space: nowrap;
+    transform: translateY(-50%);
+    -webkit-animation: fade 400ms 4s ease-out forwards;
+            animation: fade 400ms 4s ease-out forwards;
+    -webkit-user-select: none;
+      -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;
+  }
+
+  .toggle svg {
+    --size: 1.5rem;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: var(--size);
+    height: var(--size);
+    fill: currentcolor;
+    transform: translate(-50%, -50%);
+    transition: transform 300ms cubic-bezier(0.25, 1, 0.5, 1);
+  }
+
+  .toggle--vertical svg {
+    transform: translate(-50%, -50%) rotate(-90deg);
   }
 }
+
+
+
+
+
 @media (max-width: 400px) {
+    .marquee {
+      --size: 14rem;
+      --gap: 1rem;
+    }
+  }
+
+  @media (max-width: 300px) {
     .marquee {
       --size: 11rem;
       --gap: 1rem;
-    }
-    .marquee--vertical {
-      --size: 11rem;
     }
   }
