--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,10 @@
-/*:root{
-    
-}*/
+@import url('https://fonts.googleapis.com/css2?family=Lexend&family=Montserrat&family=Mulish:wght@800&display=swap');
 
 
 *{
     margin: 0;
     padding: 0;
+    font-family: 'Lexend', sans-serif;;
 }
 
-header{
-    position: absolute;
-    margin-left: auto;
-    margin-right: auto;
-    top: 15px;
-    left: 0;
-    right: 0;
-    text-align: center;
 
-
-    background-color: black;
-}
