--- a/css/home.css
+++ b/css/home.css
@@ -92,18 +92,9 @@ body {
   }
 }
 
-@keyframes scroll-x {
-  from {
-    transform: translateX(var(--scroll-start));
-  }
-  to {
-    transform: translateX(var(--scroll-end));
-  }
-}
-
 
 /* Element styles */
-.marquee svg {
+.marquee .marquee__group div {
   display: grid;
   place-items: center;
   width: var(--size);
@@ -173,7 +164,7 @@ body {
   }
 
   /* Element styles */
-  .marquee svg {
+  .marquee .marquee__group div {
     display: grid;
     place-items: center;
     width: var(--size);
@@ -184,7 +175,7 @@ body {
     border-radius: 0.5rem;
   }
 
-  .marquee svg {
+  .marquee .marquee__group div {
     aspect-ratio: 1;
     width: calc(var(--size) / 1.5);
     padding: calc(var(--size) / 6);
@@ -202,64 +193,6 @@ body {
   .wrapper {
     flex-direction: row;
     height: 100vh;
-  }
-
-  /* Toggle direction button */
-  .toggle {
-    --size: 3rem;
-    position: relative;
-    position: fixed;
-    top: 1rem;
-    left: 1rem;
-    width: var(--size);
-    height: var(--size);
-    font: inherit;
-    text-align: center;
-    cursor: pointer;
-    outline: none;
-    border: none;
-    border-radius: 50%;
-    color: inherit;
-    background-color: var(--color-bg-accent);
-    z-index: 1;
-  }
-
-  .toggle:focus-visible {
-    box-shadow: 0 0 0 2px var(--color-text);
-  }
-
-  .toggle span {
-    position: absolute;
-    display: inline-block;
-    top: 50%;
-    left: calc(100% + 0.4em);
-    width: -webkit-fit-content;
-    width: -moz-fit-content;
-    width: fit-content;
-    white-space: nowrap;
-    transform: translateY(-50%);
-    -webkit-animation: fade 400ms 4s ease-out forwards;
-            animation: fade 400ms 4s ease-out forwards;
-    -webkit-user-select: none;
-      -moz-user-select: none;
-        -ms-user-select: none;
-            user-select: none;
-  }
-
-  .toggle svg {
-    --size: 1.5rem;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: var(--size);
-    height: var(--size);
-    fill: currentcolor;
-    transform: translate(-50%, -50%);
-    transition: transform 300ms cubic-bezier(0.25, 1, 0.5, 1);
-  }
-
-  .toggle--vertical svg {
-    transform: translate(-50%, -50%) rotate(-90deg);
   }
 }
 
