Added scroll name to image

--- a/css/home.css
+++ b/css/home.css
@@ -61,7 +61,7 @@ body {
 .scroll-animations > .scrollsection > .item.-small:nth-of-type(4n) {
   bottom: -13vh;
 }
-.scroll-animations > .scrollsection > .item > .image {
+.scroll-animations > .scrollsection > .item > .image-scroll {
   height: 100%;
   width: 100%;
   position: absolute;
@@ -75,35 +75,35 @@ body {
 
   object-fit: contain;
 }
-.scroll-animations > .scrollsection > .item:nth-of-type(4n) > .image {
+.scroll-animations > .scrollsection > .item:nth-of-type(4n) > .image-scroll {
   transform: translateX(-30vh) translateY(-30vh) scale(0.8);
   transition-delay: 0;
 }
-.scroll-animations > .scrollsection > .item:nth-of-type(4n - 1) > .image {
+.scroll-animations > .scrollsection > .item:nth-of-type(4n - 1) > .image-scroll {
   transform: translateX(30vh) translateY(30vh) scale(0.8);
   transition-delay: 0.05s;
 }
-.scroll-animations > .scrollsection > .item:nth-of-type(4n - 2) > .image {
+.scroll-animations > .scrollsection > .item:nth-of-type(4n - 2) > .image-scroll {
   transform: translateX(-30vh) translateY(30vh) scale(0.8);
   transition-delay: 0.1s;
 }
-.scroll-animations > .scrollsection > .item:nth-of-type(4n - 3) > .image {
+.scroll-animations > .scrollsection > .item:nth-of-type(4n - 3) > .image-scroll {
   transform: translateX(-30vh) translateY(-30vh) scale(0.8);
   transition-delay: 0.15s;
 }
-.scroll-animations > .scrollsection > .item > .image.-active {
+.scroll-animations > .scrollsection > .item > .image-scroll.-active {
   transform: translateX(0) translateY(0) scale(1);
   opacity: 0.8;
   pointer-events: auto;
   transition: filter 0.3s ease, opacity 1s ease, transform 1s ease;
 }
-.scroll-animations > .scrollsection > .item > .image.-clicked {
+.scroll-animations > .scrollsection > .item > .image-scroll.-clicked {
   transform: translateX(0) translateY(0) scale(5);
   opacity: 0;
   pointer-events: auto;
   transition: filter 0.3s ease, opacity 1s ease, transform 1s ease;
 }
-.scroll-animations > .scrollsection > .item > .image.-active:hover {
+.scroll-animations > .scrollsection > .item > .image-scroll.-active:hover {
   height: 100%;
   width: 100%;
   position: absolute;
